--- a/assets/index.css
+++ b/assets/index.css
@@ -43,12 +43,14 @@ body{
 
 header{
     display: flex;
-    width: 100%;
+    width: 100vw;
     align-items: center;
     justify-content: space-between;
     padding-top: 20px;
     z-index: 2;
-    position: relative;
+    position: absolute;
+    top:0;
+    left:0;
 }
 
 nav > ul{
@@ -83,7 +85,7 @@ footer{
     position: fixed;
     bottom: 10px;
     left: 0;
-    width: 100%;
+    width: 100vw;
     z-index: 2;
     display: flex;
     justify-content: space-between;
@@ -100,7 +102,6 @@ footer .right-icon{ margin-right: 30px; }
 
 @media screen and (max-width: 768px){
     header{
-        padding-top: 20px;
         flex-direction: column;
     }
 
