--- a/assets/map.css
+++ b/assets/map.css
@@ -142,7 +142,8 @@ nav.side-nav a.active::after{ width: 30px;}
     }    
 
     #countries_list{
-        bottom: 18vh;
+        bottom: unset;
+        bottom: 200px;
         left: 30px;
         font-size: 20px;
         width: calc(100% - 60px);;
