--- a/assets/tooltip.css
+++ b/assets/tooltip.css
@@ -50,37 +50,37 @@
 
 @-webkit-keyframes home_hero_item_hints_glow {
     0% {
-        -webkit-box-shadow: 0 0 30px 5px #aa4848;
-        box-shadow: 0 0 30px 5px #aa4848;
+        -webkit-box-shadow: 0 0 30px 8px white;
+        box-shadow: 0 0 30px 8px white;
     }
     70% {
-        -webkit-box-shadow: 0 0 70px 50px rgba(72, 170, 72, 0);
-        box-shadow: 0 0 70px 50px rgba(72, 170, 72, 0);
+        -webkit-box-shadow: 0 0 70px 50px rgba(255, 255, 255, 0);
+        box-shadow: 0 0 70px 50px rgba(255, 255, 255, 0);
     }
     100% {
-        -webkit-box-shadow: 0 0 0 50px rgba(72, 170, 72, 0);
-        box-shadow: 0 0 0 50px rgba(72, 170, 72, 0);
+        -webkit-box-shadow: 0 0 0 50px rgba(255, 255, 255, 0);
+        box-shadow: 0 0 0 50px rgba(255, 255, 255, 0);
     }
 }
 
 @keyframes home_hero_item_hints_glow {
     0% {
-        -webkit-box-shadow: 0 0 30px 5px #aa4848;
-        box-shadow: 0 0 30px 5px #aa4848;
+        -webkit-box-shadow: 0 0 30px 8px white;
+        box-shadow: 0 0 30px 8px white;
     }
     70% {
-        -webkit-box-shadow: 0 0 70px 50px rgba(72, 170, 72, 0);
-        box-shadow: 0 0 70px 50px rgba(72, 170, 72, 0);
+        -webkit-box-shadow: 0 0 70px 50px rgba(255, 255, 255, 0);
+        box-shadow: 0 0 70px 50px rgba(255, 255, 255, 0);
     }
     100% {
-        -webkit-box-shadow: 0 0 0 50px rgba(72, 170, 72, 0);
-        box-shadow: 0 0 0 50px rgba(72, 170, 72, 0);
+        -webkit-box-shadow: 0 0 0 50px rgba(255, 255, 255, 0);
+        box-shadow: 0 0 0 50px rgba(255, 255, 255, 0);
     }
 }
 
 .hint-dot {
     z-index: 3;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     border-radius: 50%;
     width: 60px;
     height: 60px;
