--- a/assets/map.css
+++ b/assets/map.css
@@ -56,7 +56,7 @@ nav.side-nav a.active::after{ width: 30px;}
 
 #countries_cont{
     position: relative;
-    background-color: black;
+    background-color: white;
 }
 
 #countries_cont .countries-bg{
@@ -181,7 +181,7 @@ nav.side-nav a.active::after{ width: 30px;}
         top: 150px;    
         /* width: calc(100% - 40px); */
         width: 100%;
-        height: calc(100vh - 300px);
+        height: calc(100vh - 350px);
         /* left: 20px; */
         left: 0;
         border-radius: 0;
