--- a/assets/map.css
+++ b/assets/map.css
@@ -56,23 +56,28 @@ nav.side-nav a.active::after{ width: 30px;}
 
 #countries_cont{
     position: relative;
+    overflow: hidden;
     background-color: white;
 }
 
 #countries_cont .countries-bg{
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;    
+    --x: -10px;
+    --y: -10px;
+
+    left: var(--x);
+    top: var(--y);
+    width: calc(100% + 20px);
+    height: calc(100% + 20px);
+    z-index: 1;  
+
     background-image: url('../images/countries.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
 
     opacity: 0;
-    animation: fadeIn 2s forwards;
+    animation: fadeIn 2s forwards;    
 }
 
 #countries_cont > h2{
