--- a/assets/trips.css
+++ b/assets/trips.css
@@ -4,6 +4,7 @@
     left: calc(50% - 21px);
     transform: translateY(-50%);
     cursor: pointer;
+    z-index: 2;
 }
   
 .arrow {
@@ -68,19 +69,34 @@
     }
   }
 
-.trips-top-bg {
+.trips-top-banner {
     width: 100%;
     height: 100vh;
     z-index: 1;
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.90) 90%, rgba(255, 255, 255, 0.99) 100%), url('../images/trips.jpg');
+    position: relative;
+
     /* background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.90) 90%, rgba(255, 255, 255, 0.99) 100%), url('../images/trips10.jpg'); */
+    /* background-position: center 30%; */
+}
+
+.trips-top-banner > .trips-bg{
+    position: absolute;
+    --x: -10px;
+    --y: -10px;
+
+    left: var(--x);
+    top: var(--y);
+    width: calc(100% + 20px);
+    height: calc(100% + 20px);
+    z-index: 1;  
+
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.90) 90%, rgba(255, 255, 255, 0.99) 100%), url('../images/trips.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 50%;
-    /* background-position: center 30%; */
 
     opacity: 0;
-    animation: fadeIn 2s forwards;
+    animation: fadeIn 2s forwards;   
 }
 
 #trips_content_wrapper{
@@ -197,7 +213,7 @@
 
 
 @media screen and (max-width: 768px){
-    .trips-top-bg > .tooltip.show-mobile.first{
+    .trips-top-banner > .tooltip.show-mobile.first{
         display: flex;
         left: unset !important;
 
@@ -205,7 +221,7 @@
         top: 40% !important;
     }
 
-    .trips-top-bg > .tooltip.show-mobile.second{
+    .trips-top-banner > .tooltip.show-mobile.second{
         display: flex;
         right: unset !important;
         top: 65% !important;
