--- a/assets/index.css
+++ b/assets/index.css
@@ -64,6 +64,9 @@ li{
     padding: 10px 30px;
 }
 
+nav.white a{ color: white; }
+nav.white a.active-page::before{ background-color: white; }
+
 a{
     color: black;
     font-size: 18px;
