--- a/assets/trips.css
+++ b/assets/trips.css
@@ -6,10 +6,10 @@
     z-index: 2;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    height: 140px;
+    height: 120px;
 }
   
 .arrow {
