Add scroll to scroll_button script

--- a/assets/trips.css
+++ b/assets/trips.css
@@ -110,6 +110,10 @@
     width: 100vw;
 }
 
+.wrapped-top{
+    top: -100vh !important;
+}
+
 .trips-white-cont {
     background-color: white;
     width: calc(100vw - 10px);
