--- a/assets/posts.css
+++ b/assets/posts.css
@@ -82,6 +82,19 @@ body.post-body{
     margin-bottom: 20px;
 }
 
+.post-page a{
+    color: #0379ff;
+    font-size: 16px;
+    z-index: 20px;
+    pointer-events: all;
+    display: block;
+}
+
+.post-page a:hover{
+    transform: scale(1);
+    text-decoration: underline;
+}
+
 .post-image{
     width: 100%;
     max-width: 700px;
@@ -91,6 +104,15 @@ body.post-body{
     object-fit: cover;
     margin-bottom: 10px;
     object-position: center;
+}
+
+.post-image.vertical{
+    height: 100%;
+}
+
+.post-image.square{
+    height: unset;
+    aspect-ratio: 1/1;
 }
 
 .post-img-label{
@@ -121,6 +143,11 @@ body.post-body{
         font-weight: 700;
         margin: 0;
         margin-bottom: 20px;
+    }
+
+    .post-image.square{
+        height: 400px;
+        aspect-ratio: unset;
     }
 
     .post-page > .post-content{
