--- a/assets/single_trips.css
+++ b/assets/single_trips.css
@@ -16,6 +16,15 @@
     display: block;
 }
 
+#polynesia_flights{
+    width: 100%;
+    max-width: 700px;
+    height: 400px; 
+    margin: 5px auto;
+    margin-top: 30px;
+    display: block;
+}
+
 @media screen and (max-width: 768px){
     .trip-yt-video{ height: 180px; }
 }
