--- a/assets/single_trips.css
+++ b/assets/single_trips.css
@@ -8,16 +8,7 @@
     border: none;
 }
 
-#canada_roadtrip{
-    width: 100%;
-    max-width: 700px;
-    height: 400px; 
-    margin: 5px auto;
-    margin-top: 30px;
-    display: block;
-}
-
-#polynesia_flights{
+.roadtrip-animated-map {
     width: 100%;
     max-width: 700px;
     height: 400px; 
