--- a/assets/posts.css
+++ b/assets/posts.css
@@ -115,6 +115,11 @@ body.post-body{
     aspect-ratio: 1/1;
 }
 
+.post-image.trace{
+    height: unset;
+    aspect-ratio: 1/1;
+}
+
 .post-img-label{
     display: block;
     font-size: 14px;
