--- a/assets/map.css
+++ b/assets/map.css
@@ -61,23 +61,13 @@ nav.side-nav a.active::after{ width: 30px;}
 }
 
 #countries_cont .countries-bg{
-    position: absolute;
-    --x: -10px;
-    --y: -10px;
-
-    left: var(--x);
-    top: var(--y);
-    width: calc(100% + 20px);
-    height: calc(100% + 20px);
-    z-index: 1;  
-
-    background-image: url('../images/countries.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center top;
+    position: fixed !important;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
 
     opacity: 0;
-    animation: fadeIn 2s forwards;    
+    animation: fadeIn 2s forwards;
 }
 
 #countries_cont > h2{
