--- a/assets/trips.css
+++ b/assets/trips.css
@@ -97,7 +97,7 @@
     height: calc(100% + 20px);
     z-index: 1;  
 
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.90) 90%, rgba(255, 255, 255, 0.99) 100%), url('../images/trips.jpg');
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.90) 90%, rgba(255, 255, 255, 0.99) 100%);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 50%;
